2013-05-30  Juri Linkov  <juri@jurta.org>

	* isearch.el (isearch-mode-map): Bind `isearch-toggle-invisible'
	to "\M-si".
	(isearch-invisible): New variable.
	(isearch-forward): Doc fix.
	(isearch-mode): Set `isearch-invisible'
	to the value of `search-invisible'.
	(isearch-toggle-case-fold): Doc fix.
	(isearch-toggle-invisible): New command.
	(isearch-query-replace): Let-bind `search-invisible'
	to the value of `isearch-invisible'.
	(isearch-search): Use `isearch-invisible' instead of
	`search-invisible'.  Let-bind `search-invisible'
	to the value of `isearch-invisible'.  (Bug#11378)

2013-05-30  Juri Linkov  <juri@jurta.org>

	* replace.el (perform-replace): Avoid `isearch-range-invisible'
	call when `query-flag' is nil and `search-invisible' is non-nil.
	(Bug#11746)

2013-05-30  Glenn Morris  <rgm@gnu.org>

	* progmodes/gdb-mi.el (gdb-wait-for-pending): Fix typo.

	* progmodes/cc-bytecomp.el (cc-bytecomp-noruntime-functions): New.
	(cc-require): Suppress spurious "noruntime" warnings.
	(cc-require-when-compile): Use fboundp, for sake of compiler.

	* progmodes/cc-mode.el: Move load of cc-vars before that of
	cc-langs (which in turn loads cc-vars), to quieten compiler.

2013-05-30  Stefan Monnier  <monnier@iro.umontreal.ca>

	* paren.el: Simplify the code.
	(show-paren-mode): Always start the timer.
	(show-paren--idle-timer): Rename from show-paren-idle-timer.
	(show-paren--overlay, show-paren--overlay-1): Rename from
	show-paren-overlay and show-paren-overlay-1, and initialize to an
	overlay rather than to nil.
	(show-paren-function): Misc cleanup and simplifications.

2013-05-30  Stefan Monnier  <monnier@iro.umontreal.ca>

	* paren.el (show-paren-data-function): New hook.
	(show-paren--default): New function, extracted from show-paren-function.
	(show-paren-function): Use show-paren-data-function.

2013-05-30  Glenn Morris  <rgm@gnu.org>

	* ielm.el (ielm-map, ielm-complete-symbol):
	Use completion-at-point rather than obsolete functions.